--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -20,6 +22,9 @@ CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
+SESSION_DOMAIN=http://127.0.0.1:3000
+SANCTUM_STATEFUL_DOMAINS=http://127.0.0.1:3000
+# ymken tbdl session_domain l name dyal domain li bghiti
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
